<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>io.github.feydk.colorfall</groupId>
  <artifactId>colorfall</artifactId>
  <version>0.1-SNAPSHOT</version>

  <name>Colorfall</name>
  <packaging>jar</packaging>
  <url>https://cavetale.com</url>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
  <repositories>

    <!-- Spigot Repo -->
    <repository>
      <id>papermc</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>

    <!-- Cavetale Repo -->
    <repository>
      <id>cavetale</id>
      <url>https://cavetale.com/jenkins/plugin/repository/everything/</url>
    </repository>

  </repositories>
  <dependencies>

    <!-- Paper API -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.17-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
      <optional>true</optional>
    </dependency>

    <!-- SQL -->
    <dependency>
      <groupId>com.winthier.sql</groupId>
      <artifactId>sql</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Core -->
    <dependency>
      <groupId>com.cavetale.core</groupId>
      <artifactId>core</artifactId>
      <version>0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.20</version>
      <scope>provided</scope>
    </dependency>

  </dependencies>
  <build>
    <finalName>${project.name}</finalName>
    <sourceDirectory>src</sourceDirectory>
    <resources>
      <resource>
        <directory></directory>
        <includes>
          <include>plugin.yml</include>
          <include>config.yml</include>
          <include>powerups.yml</include>
          <include>rounds.yml</include>
        </includes>
      </resource>
    </resources>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
          <source>16</source>
          <target>16</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:unchecked</arg>
          </compilerArgs>
        </configuration>
      </plugin>

    </plugins>
  </build>
</project>
